# pollyMorph

./: .env.example  .gitignore  Cargo.toml  README.md  SETUP.md  VPS_SETUP.md  crypto_orders.json  crypto_positions.json  merge_positions.py  merge_positions_simple.py  run_shadow.ps1  run_shadow.sh  weather-bot.service  weather_calibration.json  weather_mos.json  weather_orders.json  weather_positions.json
.cargo/: config.toml
benches/: hot_path.rs
config/: default.toml  prometheus.yml
docker/: README.md  docker-compose.yml  grafana_dashboard.json  prometheus.yml
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/grafana/provisioning/datasources/: datasources.yml
grafana/: arb-dashboard.json  polymorph-dashboard.json
scripts/: deploy.ps1  measure_latency.sh  pgo_build.ps1  test_latency.ps1  test_latency.sh  vps_bootstrap.sh
src/: arb.rs  asm_ops.rs  backtester.rs  chainlink.rs  config.rs  execution.rs  grid.rs  hints.rs  lib.rs  main.rs  metrics.rs  oracle_scalp.rs  pricing.rs  risk.rs  shadow.rs  signing.rs  simulator.rs  tuner.rs  turbo.rs  types.rs  websocket.rs
tests/: integration_order.rs
tools/: delay_detector.py  requirements.txt  weather_edges.csv
tools/crypto/: btc_flip_predictor.py  executor.py  flip_analyzer.py  flip_predictor.py  flip_signal.py  scanner.py  strategy.py
tools/weather/: __init__.py  __main__.py  backtest.py  bias_report.py  calibration.py  config.py  datalog.py  executor.py  forecast.py  markets.py  mos.py  scanner.py  validator.py  wunderground.py
